--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,4 +5,10 @@
     <div [innerText]="numberOfMovies"></div>
 </div>
 
+{{ movie.title ?? 'No movies' }}
+
+<div *ngIf="movie.title !== undefined">
+    Movies List
+</div>
+
 <button (click)="toggle()">Toggle</button>
