--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,14 +1,1 @@
-<h1>Welcome to {{appName}}</h1>
-
-<div [hidden]="hideMovies">
-    Number of movies:
-    <div [innerText]="numberOfMovies"></div>
-</div>
-
-{{ movie.title ?? 'No movies' }}
-
-<div *ngIf="movie.title !== undefined">
-    Movies List
-</div>
-
-<button (click)="toggle()">Toggle</button>
+<h2>home</h2>
