creating login page

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,14 +1,19 @@
 <div class="header-container">
-  <h1 class="title">Lavender Movies</h1>
+  <a [routerLink]="['home']">
+    <h1 class="title">Lavender Movies</h1>
+  </a>
   <div search-menu-container>
     <div class="search-container">
       <span class="material-symbols-outlined search-icon">
         search
       </span>
       <input class="input-container" />
-    <div>
-    <span class="material-symbols-outlined menu-container">
+      <div>
+        <!-- <span class="material-symbols-outlined menu-container">
       menu
-    </span>
+    </span> -->
+        <a [routerLink]="['login']">
+          Login
+        </a>
+      </div>
     </div>
-</div>
