trying to authenticate

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
         <!-- <span class="material-symbols-outlined menu-container">
       menu
     </span> -->
-        <a [routerLink]="['login']">
+        <a [routerLink]="['/login']">
           Login
         </a>
       </div>
