--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="header-container">
   <a [routerLink]="['home']">
-    <h1 class="title">Lavender Movies</h1>
+    <h1>Lavender Movies</h1>
   </a>
   <div search-menu-container>
     <div class="search-container">
+      <input class="input-container" />
       <span class="material-symbols-outlined search-icon">
         search
       </span>
-      <input class="input-container" />
       <div>
         <!-- <span class="material-symbols-outlined menu-container">
       menu
