--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  background-color: #161516;
+  background-color: black;
   color: #EAEAEA;
   font-family: Roboto;
 }
