--- a/frontend/src/app/components/movie/movie-details/movie-details.component.html
+++ b/frontend/src/app/components/movie/movie-details/movie-details.component.html
@@ -13,9 +13,11 @@
   <p>{{ movie.genre }}</p>
   <h3>Director</h3>
   <p>{{ movie.director.name }}</p>
-  <h3>Writer</h3>
-  <p>{{ movie.writer.name }}</p>
-  <h3 >Actors</h3>
+  <h3>Writers</h3>
+  <div *ngFor="let writer of movie.writers">
+    <p>{{ writer.name }}</p>
+  </div>
+  <h3>Actors</h3>
   <div *ngFor="let actor of movie.actors">
     <p>{{ actor.name }}</p>
   </div>
