--- a/frontend/src/app/components/movie/movie.component.css
+++ b/frontend/src/app/components/movie/movie.component.css
@@ -2,12 +2,23 @@
   margin-bottom: 20px;
   padding: 10px 20px 20px 20px;
   border-bottom: 1px solid #70548C;
-}
-
-.movie-container h3{
-  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
 }
 
 .movie-container p{
   margin-bottom: 8px;
+  font-size: 20px;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  border-bottom: 1px solid #EAEAEA;
+}
+
+.image-container{
+  max-width: 200px;
 }
