--- a/frontend/src/app/components/movie/movie.component.html
+++ b/frontend/src/app/components/movie/movie.component.html
@@ -2,6 +2,7 @@
 
 <div class="movie-container" *ngFor="let movie of movies">
   <a [routerLink]="['/movie', movie.id]">
+    <img class="image-container" src="{{movie.image}}" alt="image poster of {{movie.title}}" />
     <p>{{ movie.title }}</p>
   </a>
 </div>
