--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -12,8 +12,8 @@
         <!-- <span class="material-symbols-outlined menu-container">
       menu
     </span> -->
-        <a [routerLink]="['/login']">
+        <!-- <a [routerLink]="['/login']">
           Login
-        </a>
+        </a> -->
       </div>
     </div>
