--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,10 @@
 * {
   padding: 0;
   margin: 0;
-  background-color: black;
   color: #EAEAEA;
   font-family: Roboto;
+}
+
+body{
+  background-color: #0b1225;
 }
