--- a/frontend/src/app/components/movie/movie-details/movie-details.component.css
+++ b/frontend/src/app/components/movie/movie-details/movie-details.component.css
@@ -1,10 +1,10 @@
 .main-container{
-  margin-top: 40px;
+  margin: 40px;
 }
 
 h3{
-  align-self: center;
   font-size: 32px;
+  margin: 24px;
 }
 
 img{
@@ -15,9 +15,39 @@ img{
 .movie-container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 24px;
+}
+
+.title-summary{
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 200px;
+}
+
+.movie-summary{
+  display: flex;
+  align-items: center;
+  padding: 24px;
+  width: 400px;
+  height: 50px;
+  background: rgba(110, 108, 120, 0.16);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+  border: 1px solid rgba(110, 108, 120, 0.05);
+}
+
+.title-information{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 32px;
+  width: 400px;
+  padding: 10px 15px;
+  margin-top: 100px;
 }
 
 .information-container{
@@ -26,7 +56,7 @@ img{
   align-items: center;
   gap: 32px;
   width: 400px;
-  height: 50px;
+  padding: 24px;
   background: rgba(110, 108, 120, 0.16);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -38,6 +68,7 @@ img{
 .writer-director-container{
   display: flex;
   gap: 32px;
+  margin-top: 32px;
 }
 
 .director-container{
@@ -67,8 +98,8 @@ img{
 .actor-container{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 32px;
   align-content: center;
   align-items: center;
   justify-content: center;
+  gap: 48px;
 }
