--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,14 @@
 <div class="home-container">
+  <section class="movie-day-container">
+    <!-- <div class="title-container">
+      <h3>MOVIE OF THE DAY</h3>
+    </div> -->
+    <div class="image-container">
+      <img
+        src="https://pyxis.nymag.com/v1/imgs/d7a/887/99125233ab382002123cc0e2443f396ec1-portrait-of-a-lady-on-fire.jpg"
+        alt="Poster" />
+      <h3>PORTRAIT OF A LADY ON FIRE</h3>
+    </div>
+  </section>
   <app-movie></app-movie>
 </div>
