--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -1,5 +1,21 @@
-h2{
-  padding: 20px;
-  /* border-bottom: 1px solid #70548C; */
+.movie-day-container {
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.image-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   margin-bottom: 20px;
+}
+
+.movie-day-container img {
+  width: 1000px;
+  heigth: 400px;
+  border-radius: 16px;
+  box-shadow: 1px 1px 16px #4f4d4d;
 }
