--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,9 +2,9 @@
   padding: 0;
   margin: 0;
   color: #EAEAEA;
-  font-family: Roboto;
 }
 
 body{
-  background-color: #0b1225;
+  background-color: #1B1A1A;
+  font-family: 'Source Sans Pro', sans-serif;
 }
