login and logout almost working

--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -13,6 +13,11 @@ a{
   border-radius: 4px;
 }
 
+a:hover{
+  border-bottom: 1px solid #EAEAEA;
+  cursor: pointer;
+}
+
 h1{
   font-size: 20px;
 }
@@ -22,10 +27,6 @@ span{
   color: #161516;
   position: absolute;
   right: 35px;
-}
-
-a:hover{
-  border-bottom: 1px solid #EAEAEA;
 }
 
 .button-container{
