--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,10 +1,12 @@
 <div class="login-container">
-  <h2>Login</h2>
+  <h2>LOGIN</h2>
   <form (ngSubmit)="login()">
     <div class="input-container">
       <input type="username" placeholder="User" [(ngModel)]="username" name="username" />
       <input placeholder="Password" [(ngModel)]="password" name="password" />
     </div>
-    <button type="submit">Submit</button>
+    <div class="button-container">
+      <button type="submit">SUBMIT</button>
+    </div>
   </form>
 </div>
