--- a/frontend/src/app/pages/login/login.component.css
+++ b/frontend/src/app/pages/login/login.component.css
@@ -10,5 +10,24 @@
 .input-container{
   display: flex;
   flex-direction: column;
-  width: 50%;
+}
+
+.input-container input {
+  height: 20px;
+  width: 300px;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  width: 324px;
+  padding: 10px;
+  color: black;
+  font-weight: 800;
 }
